--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             display: flex;
             height: 100vh;
             /* background: #f4f4f4; */
-            background: url('/anh2.gif');
+            background: url('anh2.gif');
             background-size: contain;
             background-position: 0px 300px;
         }
@@ -233,7 +233,7 @@
         <!-- Main content -->
         <div class="main-content">
             <div id="info">
-                <img src="/anh1.jpg" alt="Ảnh đại diện">
+                <img src="anh1.jpg" alt="Ảnh đại diện">
                 <h1>Nguyễn Văn Hải</h1>
                 <div id="hehe">
                     <p style="font-size: larger;">
