--- a/index.html
+++ b/index.html
@@ -293,6 +293,10 @@
         font-size: 24px;
       }
 
+      #hai {
+        color: white;
+      }
+
       p {
         font-size: 14px;
         color: black;
@@ -386,7 +390,7 @@
 
   <!-- Footer -->
   <div id="coDinh">
-    <p>If you have any questions, please contact me</p>
+    <p id="hai">If you have any questions, please contact me</p>
     <div class="social">
       <a href="#" onclick="openLink('https://github.com/nvhai272');"><i class="fa fa-github"></i>
         GitHub</a>
