--- a/index.html
+++ b/index.html
@@ -1,431 +1,217 @@
 <!DOCTYPE html>
 <html lang="vi">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Profile</title>
+    <!-- Bootstrap 5 CSS -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+    <!-- Font Awesome for icons -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
+    <link rel="stylesheet" href="style.css" />
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Profile</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <style>
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
+  <body>
+    <nav class="navbar navbar-expand-lg fixed-top">
+      <div class="container mt-0 mb-0">
+        <a class="navbar-brand" href="#">Hello World</a>
 
-    #aloo {
-      display: none;
-    }
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
 
-    #hidden {
-      display: none;
-    }
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav ms-auto">
+            <li class="nav-item">
+              <a class="nav-link active" href="#" onclick="showSection('info')"
+                ><i class="fa fa-user"></i>Information</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#" onclick="showSection('projects')"
+                ><i class="fa fa-code"></i>Projects</a
+              >
+            </li>
+            <!-- <li class="nav-item">
+            <a class="nav-link" href="#"><i class="fa fa-graduation-cap"></i>Experience</a>
+          </li> -->
+            <li class="nav-item">
+              <a class="nav-link" href="#" target="_blank"
+                ><i class="fa fa-youtube"></i>Youtube Channel</a
+              >
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
 
-    body {
-      font-family: 'Times New Roman', Times, serif;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      height: 100vh;
-      background: url('anh2.gif');
-      background-size: contain;
-      background-position: 0px 300px;
-    }
+    <div class="main-content container">
+      <div id="info">
+        <img src="anh1.jpg" alt="Ảnh đại diện" class="profile-img" />
+        <h1>Nguyễn Văn Hải</h1>
+        <div class="intro-text">
+          <p class="d-none d-md-block" style="font-size: larger">
+            Hello! I am currently a Coder and on my journey to become a
+            Fullstack Developer
+          </p>
+          <p class="d-none d-md-block">
+            I hope to create many useful and innovative products.<br />
+            Besides, I also really like to learn about culture and want to
+            explore many places...
+          </p>
+          <p class="d-md-none">
+            I am currently a Coder<br />
+            I hope to create many useful and innovative products.
+          </p>
+        </div>
+        <button class="btn btn-custom mt-3 mb-3" onclick="showSection('projects')">
+          <i class="fa fa-code"></i> Go to My Projects
+        </button>
 
-    #hehe {
-      display: block;
-      padding: 10px;
-      border-radius: 5px;
-      background: rgba(255, 255, 255, 0.2);
-      color: black;
-    }
-
-    /* Thanh menu ngang */
-    .navbar {
-      width: 100%;
-      background: rgba(255, 255, 255, 0.9);
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      padding: 10px 20px;
-      position: fixed;
-      top: 0;
-      left: 0;
-      z-index: 1000;
-      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-      font-family: 'Courier New', Courier, monospace;
-    }
-
-    .navbar h2 {
-      font-size: 22px;
-      color: black;
-    }
-
-    /* Thẻ chứa menu ngang (giữ nguyên bố cục) */
-    .menu {
-      display: flex;
-      gap: 15px;
-    }
-
-    .menu a {
-      display: flex;
-      align-items: center;
-      padding: 10px 15px;
-      text-decoration: none;
-      color: black;
-      font-weight: bold;
-      transition: 0.3s;
-      border-radius: 5px;
-    }
-
-    .menu a:hover {
-      background: #d6d2d2;
-    }
-
-    /* Định dạng icon trong menu */
-    .menu i {
-      margin-right: 5px;
-    }
-
-    /* Mục menu đang active */
-    .menu a.active {
-      background: orange;
-      color: white;
-    }
-
-    /* Nội dung chính */
-    .main-content {
-      width: 80%;
-      max-width: 800px;
-      padding: 20px;
-      margin-top: 180px;
-      /* Để tránh bị menu che mất nội dung */
-      text-align: center;
-      transition: all 0.3s ease;
-    }
-
-    img {
-      width: 150px;
-      height: 150px;
-      border-radius: 50%;
-      object-fit: cover;
-      margin-bottom: 15px;
-    }
-
-    h1 {
-      font-size: 30px;
-      color: black;
-      margin-bottom: 20px;
-    }
-
-    p {
-      font-size: 18px;
-      color: white;
-      line-height: 1.5;
-    }
-
-    /* Phần dự án */
-    #info {
-      display: block;
-    }
-
-    #projects {
-      display: none;
-      margin-top: 100px;
-    }
-
-    .menu-toggle button {
-      margin: 0%;
-    }
-
-    /* Nút bấm */
-    button {
-      background: linear-gradient(to right, #007bff, #00c6ff);
-      color: white;
-      font-size: 18px;
-      font-weight: bold;
-      padding: 12px 24px;
-      border: none;
-      border-radius: 8px;
-      cursor: pointer;
-      transition: all 0.3s ease;
-      margin-top: 15px;
-    }
-
-    button:hover {
-      background: linear-gradient(to right, #0056b3, #0099cc);
-      transform: scale(1.05);
-    }
-
-    /* Footer */
-    #coDinh {
-      width: 100%;
-      background: rgba(0, 0, 0, 0.7);
-      color: white;
-      text-align: center;
-      padding: 5px 0;
-      position: fixed;
-      bottom: 0;
-      left: 0;
-      overflow-x: auto;
-      white-space: nowrap;
-    }
-
-    /* Social links */
-    .social {
-      display: flex;
-      justify-content: center;
-      gap: 15px;
-      margin-bottom: 0px;
-    }
-
-    .social a {
-      display: flex;
-      align-items: center;
-      gap: 8px;
-      text-decoration: none;
-      font-size: 16px;
-      color: black;
-      padding: 3px 20px;
-      border-radius: 8px;
-      border: 2px solid black;
-      background: white;
-      transition: 0.3s;
-    }
-
-    .social a:hover {
-      background: rgb(53, 164, 205);
-      color: white;
-    }
-
-    /* Icon Style */
-    .social i {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      width: 35px;
-      height: 30px;
-      font-size: 20px;
-      border-radius: 50%;
-      border: 3px solid #d2cece;
-      background: white;
-    }
-
-    /* Custom icon colors */
-    .fa-github {
-      color: black;
-    }
-
-    .fa-facebook {
-      color: #1877f2;
-    }
-
-    .fa-linkedin {
-      color: #0a66c2;
-    }
-
-    .fa-comments {
-      color: #0088cc;
-    }
-
-    @media (max-width: 768px) {
-      #hidden {
-        display: block;
-      }
-
-      #alo {
-        display: none;
-      }
-
-      #aloo {
-        display: contents;
-      }
-
-      .menu {
-        flex-direction: column;
-        align-items: center;
-        width: 100%;
-        position: fixed;
-        top: 100px;
-        left: 0;
-        background: rgba(255, 255, 255, 0.9);
-        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-        display: none;
-      }
-
-      .menu a {
-        display: block;
-        width: 100%;
-        text-align: center;
-      }
-
-      .menu.active {
-        display: flex;
-      }
-
-      /* Căn giữa nội dung chính theo chiều dọc */
-      .main-content {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        height: calc(100vh - 150px);
-        margin-top: 120px;
-      }
-
-      .navbar {
-        flex-direction: column;
-        text-align: center;
-      }
-
-      .navbar h2 {
-        margin-bottom: 10px;
-      }
-    }
-
-    @media (max-width: 480px) {
-      .menu-toggle {
-        font-size: 25px;
-        cursor: pointer;
-        display: block;
-      }
-
-      h1 {
-        font-size: 24px;
-      }
-
-      #hai {
-        color: white;
-      }
-
-      p {
-        font-size: 14px;
-        color: black;
-      }
-
-      button {
-        font-size: 16px;
-
-      }
-
-      img {
-        width: 120px;
-        height: 120px;
-      }
-
-      #anDi {
-        display: none;
-      }
-
-
-      #projects a,
-      h2 {
-        font-size: larger;
-      }
-
-      #projects p {
-        color: black;
-      }
-    }
-  </style>
-</head>
-
-<body>
-
-  <nav class="navbar">
-    <h2>Hello World</h2>
-    <!-- Nút menu-toggle được thêm vào cho responsive -->
-    <div class="menu-toggle" id="hidden" onclick="toggleMenu()"><button>Menu</button></div>
-    <div class="menu">
-      <a href="#" class="active" onclick="showSection('info')" onclick="closeMenu()"><i class="fa fa-user"></i>
-        Information</a>
-      <a href="#" onclick="showSection('projects')" onclick="closeMenu()"><i class="fa fa-code"></i> Projects</a>
-      <a href="#"><i class="fa fa-graduation-cap" onclick="closeMenu()"></i> Experience</a>
-      <a href="#"><i class="fa fa-envelope" onclick="closeMenu()"></i> Contact</a>
-    </div>
-  </nav>
-
-  <div class="main-content" id="content">
-    <div id="info">
-      <img src="anh1.jpg" alt="Ảnh đại diện">
-      <h1>Nguyễn Văn Hải</h1>
-      <div id="hehe">
-        <p style="font-size: larger;" id="alo">
-          Hello! I am currently a Coder and on my journey to become a Fullstack Developer
-        </p>
-        <p id="alo">
-          I hope to create many useful and innovative products.
-          <br>
-          Besides, I also really like to learn about culture and
-          want to explore many places...
-        </p>
-
-        <p style="font-size: larger;" id="aloo">
-          I am currently a Coder
-          <br>
-          I hope to create many useful and innovative products.
-        </p>
+        <div class="vd">
+        <iframe
+          id="youtubeVideo"
+          width="100%"
+          height="315"
+          src="https://www.youtube.com/embed/_O38C1VuKvw?enablejsapi=1"
+          title="YouTube video player"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          allowfullscreen
+        ></iframe>
+      </div>
 
       </div>
-      <br>
-      <button onclick="showSection('projects')"><i class="fa fa-code"></i> Go to My Projects</button>
+
+      <div id="projects">
+        <h1>My Projects</h1>
+        <div class="list-group">
+          <a
+            href="https://github.com/nvhai272/Marina-Fleet-Web"
+            target="_blank"
+            class="list-group-item-action"
+          >
+            <i class="fa fa-github"></i> Web app: Ship management and service
+            provision
+          </a>
+          <a
+            href="https://github.com/nvhai272/Manager-Borrow-Books-Java-App"
+            target="_blank"
+            class="list-group-item-action"
+          >
+            <i class="fa fa-github"></i> Desktop app: Library book lending and
+            returning management
+          </a>
+          <a
+            href="https://github.com/nvhai272/Online-Mobile-Recharge-Web"
+            target="_blank"
+            class="list-group-item-action"
+          >
+            <i class="fa fa-github"></i> Web app: Manage and provide e-wallet
+            services for mobile networks
+          </a>
+          <a
+            href="https://github.com/nvhai272/AppMusic_WebAppManagement"
+            target="_blank"
+            class="list-group-item-action"
+          >
+            <i class="fa fa-github"></i> Web + Mobile: Manage music sites and
+            online music applications
+          </a>
+        </div>
+        <p class="mt-3">Updating...</p>
+      </div>
     </div>
 
-    <div id="projects" class="paaa">
-      <h1>My Projects</h1>
-      <a href="https://github.com/nvhai272/Marina-Fleet-Web" target="_blank">
-        <i class="fa fa-github"></i> Web quản lí và cung cấp dịch vụ trên tàu
-      </a><br>
-      <a href="https://github.com/nvhai272/Manager-Borrow-Books-Java-App" target="_blank">
-        <i class="fa fa-github"></i> Ứng dụng quản lí việc mượn, trả sách thư viện
-      </a><br>
-      <a href="https://github.com/nvhai272/Online-Mobile-Recharge-Web" target="_blank">
-        <i class="fa fa-github"></i> Web quản lí và cung cấp dịch vụ nạp tiền và đăng kí gói mạng di động
-      </a><br>
-      <a href="https://github.com/nvhai272/AppMusic_WebAppManagement" target="_blank">
-        <i class="fa fa-github"></i> Ứng dụng nghe nhạc trực tuyến và web quản lí ứng dụng
-      </a><br><br>
-      <p>Updating...</p>
-    </div>
-  </div>
+    <footer>
+      <p class="mb-0">If you have any questions, please contact me</p>
+      <div class="social d-flex justify-content-center flex-wrap">
+        <a href="#" onclick="openLink('https://github.com/nvhai272')"
+          ><i class="fa fa-github"></i> GitHub</a
+        >
+        <a href="#" onclick="openLink('https://www.facebook.com/nvhai272')"
+          ><i class="fa fa-facebook"></i> Facebook</a
+        >
+        <a
+          href="#"
+          class="an_di d-md-flex d-none"
+          onclick="openLink('https://www.linkedin.com/in/ha%CC%89i-nguy%C3%AA%CC%83n-8a3339273/')"
+          ><i class="fa fa-linkedin"></i> LinkedIn</a
+        >
+        <a
+          href="#"
+          class="an_di d-md-flex d-none"
+          onclick="openLink('https://zalo.me/0357769040')"
+          ><i class="fa fa-comments"></i> Zalo</a
+        >
+      </div>
+    </footer>
 
-  <!-- Footer -->
-  <div id="coDinh">
-    <p id="hai">If you have any questions, please contact me</p>
-    <div class="social">
-      <a href="#" onclick="openLink('https://github.com/nvhai272');"><i class="fa fa-github"></i>
-        GitHub</a>
-      <a href="#" onclick="openLink('https://www.facebook.com/nvhai272');">
-        <i class="fa fa-facebook"></i> Facebook</a>
-      <a href="#" id="anDi" onclick="openLink('https://www.linkedin.com/in/ha%CC%89i-nguy%C3%AA%CC%83n-8a3339273/');">
-        <i class="fa fa-linkedin"></i> LinkedIn</a>
-      <a href="#" onclick="openLink('https://zalo.me/0357769040');">
-        <i class="fa fa-comments"></i> Zalo</a>
-    </div>
-  </div>
+    <!-- Bootstrap 5 JS and Popper.js -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script>
+      let player;
+      let hasPlayed = false; // Theo dõi trạng thái phát
 
-  <script>
-    function showSection(sectionId) {
-      document.getElementById("info").style.display = "none";
-      document.getElementById("projects").style.display = "none";
-      document.getElementById(sectionId).style.display = "block";
+      function onYouTubeIframeAPIReady() {
+        player = new YT.Player('youtubeVideo', {
+          events: {
+            'onReady': onPlayerReady
+          }
+        });
+      }
 
-      document.querySelectorAll(".menu a").forEach(item => item.classList.remove("active"));
-      document.querySelector(`.menu a[onclick="showSection('${sectionId}')"]`).classList.add("active");
-    }
+      function onPlayerReady(event) {
+        if (!hasPlayed) {
+          player.playVideo(); // Phát ngay khi sẵn sàng
+          hasPlayed = true; // Đánh dấu đã phát
+        }
 
-    function toggleMenu() {
-      document.querySelector(".menu").classList.toggle("active");
-    }
+        const video = document.getElementById('youtubeVideo');
+        const observer = new IntersectionObserver((entries) => {
+          entries.forEach(entry => {
+            if (!entry.isIntersecting && hasPlayed) {
+              player.pauseVideo(); // Dừng khi ra khỏi viewport
+            }
+          });
+        }, { threshold: 0.1 });
+        observer.observe(video);
+      }
 
-    function openLink(url) {
-      window.open(url, '_blank');
-    }
+      function showSection(sectionId) {
+        // if (player && typeof player.pauseVideo === 'function') {
+        //   player.pauseVideo();
+        //   hasPlayed = true; // Ngăn phát lại khi chuyển section
+        // }
+        document.getElementById("info").style.display = "none";
+        document.getElementById("projects").style.display = "none";
+        document.getElementById(sectionId).style.display = "block";
+        document.querySelectorAll(".nav-link").forEach((item) => item.classList.remove("active"));
+        document.querySelector(`.nav-link[onclick="showSection('${sectionId}')"]`).classList.add("active");
+        const navbar = document.getElementById("navbarNav");
+        if (navbar.classList.contains("show")) {
+          bootstrap.Collapse.getInstance(navbar).hide();
+        }
+      }
 
-    function closeMenu() {
-      document.querySelector(".menu").classList.remove("active");
-    }
-  </script>
-
-</body>
-
+      function openLink(url) {
+        window.open(url, "_blank");
+      }
+    </script>
+    <script src="https://www.youtube.com/iframe_api"></script>
+  </body>
 </html>
