--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Profile</title>
+    <link href="https://fonts.googleapis.com/css2?family=Great Vibes&display=swap" rel="stylesheet">
     <!-- Bootstrap 5 CSS -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
@@ -62,8 +63,8 @@
     <div class="main-content container">
       <div id="info">
         <img src="anh1.jpg" alt="Ảnh đại diện" class="profile-img" />
-        <h1>Nguyễn Văn Hải</h1>
-        <div class="intro-text">
+        <h1 class="text-white" style="font-family: 'Great Vibes', cursive;">Nguyễn Văn Hải</h1>
+        <div class="intro-text text-white">
           <p class="d-none d-md-block" style="font-size: larger">
             Hello! I am currently a Coder and on my journey to become a
             Fullstack Developer
@@ -73,7 +74,7 @@
             Besides, I also really like to learn about culture and want to
             explore many places...
           </p>
-          <p class="d-md-none">
+          <p class="d-md-none text-white">
             I am currently a Coder<br />
             I hope to create many useful and innovative products.
           </p>
@@ -87,9 +88,8 @@
           id="youtubeVideo"
           width="100%"
           height="315"
-          src="https://www.youtube.com/embed/_O38C1VuKvw?enablejsapi=1"
+          src="https://www.youtube.com/embed/WH9iEeloHBs?enablejsapi=1"
           title="YouTube video player"
-          frameborder="0"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
           allowfullscreen
         ></iframe>
@@ -97,9 +97,9 @@
 
       </div>
 
-      <div id="projects">
+      <div id="projects" class="text-white">
         <h1>My Projects</h1>
-        <div class="list-group">
+        <div class="list-group intro-text">
           <a
             href="https://github.com/nvhai272/Marina-Fleet-Web"
             target="_blank"
